[tool.poetry]
name = "chumpy"
version = "0.70.0"
description = "chumpy forked"
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = ">=1.8.1"
scipy = ">=0.13.0"
six = ">=1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
